samples/_failures_safe/1761277689_5f2e25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37a14daf.c: In function ‘main’:
./samples/SAFE/__tmp_37a14daf.c:151:12: error: missing terminating " character
  151 |     printf("1. Matrix Addition
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_37a14daf.c:151:5: error: expected expression at end of input
  151 |     printf("1. Matrix Addition
      |     ^~~~~~
./samples/SAFE/__tmp_37a14daf.c:151:5: error: expected declaration or statement at end of input
